# GEM-active

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSES.txt  README.md  build.rs  usage.md
aigpdk/: aigpdk.lib  aigpdk.v  aigpdk_nomem.lib  memlib_yosys.txt  memlib_yosys_behavior_oneport.v
benchmarks/: high_activity_lfsr.v  low_activity_counter.v
csrc/: kernel_v1.cu  kernel_v1_impl.cuh
docs/: gem_active.md
eda-infra-rs/: Cargo.toml  README.md
eda-infra-rs/clilog/: Cargo.toml  README.md
eda-infra-rs/clilog/src/: lib.rs  logging_timer.rs
eda-infra-rs/clilog/tests/: basic.rs
eda-infra-rs/netlistdb/: Cargo.toml  README.md  build.rs
eda-infra-rs/netlistdb/csrc/: lib.hpp
eda-infra-rs/netlistdb/examples/: print_statistics.rs
eda-infra-rs/netlistdb/src/: builder.rs  csr.rs  disjoint_set.rs  hier_name.rs  lib.rs  utils.rs
eda-infra-rs/netlistdb/tests/: notsimple.rs  notsimple.v  simple.rs  simple.v
eda-infra-rs/sverilogparse/: Cargo.toml  README.md
eda-infra-rs/sverilogparse/examples/: sverilog_statistics.rs
eda-infra-rs/sverilogparse/src/: fmt.rs  lib.rs  range.rs  sverilognom.rs
eda-infra-rs/sverilogparse/tests/: assign.v  not_connected.v  portdef.v  simple.v  tests.rs  vector.v
eda-infra-rs/ucc/: Cargo.toml  README.md
eda-infra-rs/ucc/src/: bindgen.rs  compile.rs  headers.rs  lib.rs  lsp.rs
eda-infra-rs/ulib/: Cargo.toml  README.md  build.rs
eda-infra-rs/ulib/csrc/: includes.hpp  macros.hpp  memfill.cpp  memfill.cu  types.hpp  utils.hpp
eda-infra-rs/ulib/src/: lib.rs  profile.rs  raw_ptr.rs  uvec.rs
eda-infra-rs/ulib/tests/: test_profile.rs  test_simple.rs
eda-infra-rs/ulib/ulib-derive/: Cargo.toml
eda-infra-rs/ulib/ulib-derive/src/: lib.rs
eda-infra-rs/ulib_zeroable_derive/: APACHE_license  Cargo.toml  Changelog.md  MIT_license  readme.md
eda-infra-rs/ulib_zeroable_derive/src/: attribute_parsing_shared.rs  datastructure.rs  lib.rs  macros.rs  repr_attr.rs  utils.rs  zeroable_macro.rs
eda-infra-rs/ulib_zeroable_derive/src/zeroable_macro/: attribute_parsing.rs  tests.rs
eda-infra-rs/vcd-ng/: Cargo.toml  LICENSE  README.md
eda-infra-rs/vcd-ng/src/: fastflow.rs  idcode.rs  lib.rs  read.rs  write.rs
scripts/: analyze_gem_active_profile.py  compare_vcd_semantic.py  run_gem_active_benchmarks.sh
src/: aig.rs  aigpdk.rs  flatten.rs  lib.rs  pe.rs  repcut.rs  staging.rs
