[package]
name = "clilog"
version = "0.2.5"
edition = "2021"
description = "CLI logger with automatic suppression and stopwatch."
authors = ["Zizheng Guo <gzz_2000@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
paste = "1.0.7"
simplelog = { version = "0.12.2", features = ["test"] }
