[package]
name = "netlistdb"
version = "0.4.8"
edition = "2021"
description = "Heterogeneous VLSI circuit netlist database with support for vector nets, hierarchical modules, assignments, etc."
authors = ["Zizheng Guo <gzz_2000@126.com>"]
links = "netlistdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sverilogparse = { version = "0.4.3", path = "../sverilogparse" }
clilog = { version = "0.2.5", path = "../clilog" }
scopeguard = "1.1.0"
readonly = "0.2.2"
either = "1.8.0"
ulib = { version = "0.3.13", features = ["rayon"], path = "../ulib" }
compact_str = "0.7.1"
rayon = "1.7.0"
regex = "1.9.5"
thread_local = "1.1.7"
dyn-iter = "1.0.1"
itertools = "0.10.3"

[build-dependencies]
ucc = { version = "0.2.6", path = "../ucc" }
