[package]
name = "ucc"
version = "0.2.6"
edition = "2021"
description = "Universal compiler invocator for heterogeneous CPU/GPU computation applications"
authors = ["Zizheng Guo <gzz_2000@126.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = { version = "1.0.89", features = ["parallel"] }
fs_extra = "1.3.0"
indexmap = "1.9.3"
prettyplease = "0.2.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
syn = "2.0.14"
tree-sitter = "0.20.10"
tree-sitter-cpp = "0.20.0"

[features]
ulib = []
default = ["ulib"]
