[package]
name = "ulib-derive"
version = "0.1.0"
edition = "2021"
authors = ["Zizheng Guo <gzz_2000@126.com>"]
description = "The inner procedural macros for ulib. Not intended to be used directly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.29"

[features]
cuda = []
